syntax = "proto3";

package schedule.v1;

option go_package = "backend/gen/schedulepb;schedulepb";

import "google/protobuf/timestamp.proto";

message Appointment {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;

  enum RecurrenceFrequency {
    RECURRENCE_FREQUENCY_UNSPECIFIED = 0;
    RECURRENCE_FREQUENCY_NONE = 1;
    RECURRENCE_FREQUENCY_DAILY = 2;
    RECURRENCE_FREQUENCY_WEEKLY = 3;
    RECURRENCE_FREQUENCY_MONTHLY = 4;
  }

  // If frequency is NONE, recurrence_end_time is ignored.
  RecurrenceFrequency recurrence_frequency = 6;
  google.protobuf.Timestamp recurrence_end_time = 7;
}

message CreateAppointmentRequest {
  Appointment appointment = 1;
}

message CreateAppointmentResponse {
  // For non-recurring appointments, this will contain a single element.
  repeated Appointment created = 1;
}

message ListAppointmentsRequest {
  // Optional: if omitted, returns all appointments.
  google.protobuf.Timestamp range_start = 1;
  google.protobuf.Timestamp range_end = 2;
}

message ListAppointmentsResponse {
  repeated Appointment appointments = 1;
}

message DeleteAppointmentRequest {
  string id = 1;
}

message DeleteAppointmentResponse {}

message Conflict {
  string existing_id = 1;
  google.protobuf.Timestamp existing_start_time = 2;
  google.protobuf.Timestamp existing_end_time = 3;
  string existing_title = 4;
}

message ConflictErrorDetails {
  repeated Conflict conflicts = 1;
}

service ScheduleService {
  rpc CreateAppointment(CreateAppointmentRequest) returns (CreateAppointmentResponse);
  rpc ListAppointments(ListAppointmentsRequest) returns (ListAppointmentsResponse);
  rpc DeleteAppointment(DeleteAppointmentRequest) returns (DeleteAppointmentResponse);
}
